[gd_scene load_steps=10 format=2]

[ext_resource path="res://imagenes sin fondo/player.png" type="Texture" id=1]
[ext_resource path="res://imagenes sin fondo/vida.png" type="Texture" id=2]
[ext_resource path="res://imagenes sin fondo/marco.png" type="Texture" id=3]
[ext_resource path="res://imagenes sin fondo/boton.png" type="Texture" id=4]
[ext_resource path="res://imagenes sin fondo/mira.png" type="Texture" id=5]
[ext_resource path="res://player.gd" type="Script" id=6]
[ext_resource path="res://imagenes sin fondo/home--v1.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "corriendo",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.8868
height = 77.212

[node name="player" type="KinematicBody2D"]
position = Vector2( 441.771, 215.091 )
scale = Vector2( 0.68, 0.72 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.578604, 0.611111 )
frames = SubResource( 1 )
animation = "saltar"

[node name="pocision_bala" type="Position2D" parent="."]
position = Vector2( 103.498, -5.54666 )
scale = Vector2( 0.5, 0.5 )

[node name="colision" type="CollisionShape2D" parent="."]
position = Vector2( 3.56763, -1.18919 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Boton_derecha" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 181.367, 490 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="Boton_izquierda" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 144, 592 )
rotation = 3.14159
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="Boton_saltar" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 900, 580 )
rotation = 4.71239
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="Boton_disparar" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 839.619, 279.136 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )

[node name="boton_home" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 927.154, 4.48984 )
scale = Vector2( 0.197763, 0.216742 )
normal = ExtResource( 7 )

[node name="Barra_vida" type="TextureProgress" parent="CanvasLayer"]
margin_left = 100.0
margin_right = 432.0
margin_bottom = 30.0
rect_scale = Vector2( 1.12, 1.24 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Numero_vida" type="Label" parent="CanvasLayer"]
margin_left = 36.0
margin_top = 6.0
margin_right = 76.0
margin_bottom = 29.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 8.32452, -5.946 )
zoom = Vector2( 2, 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 5.91747, -2.19628 )
scale = Vector2( 5.33125, 7.79136 )
[connection signal="pressed" from="CanvasLayer/Boton_derecha" to="." method="_on_Boton_derecha_pressed"]
[connection signal="released" from="CanvasLayer/Boton_derecha" to="." method="_on_Boton_derecha_released"]
[connection signal="pressed" from="CanvasLayer/Boton_izquierda" to="." method="_on_Boton_izquierda_pressed"]
[connection signal="released" from="CanvasLayer/Boton_izquierda" to="." method="_on_Boton_izquierda_released"]
[connection signal="pressed" from="CanvasLayer/Boton_saltar" to="." method="_on_Boton_saltar_pressed"]
[connection signal="released" from="CanvasLayer/Boton_saltar" to="." method="_on_Boton_saltar_released"]
[connection signal="pressed" from="CanvasLayer/Boton_disparar" to="." method="_on_Boton_disparar_pressed"]
[connection signal="pressed" from="CanvasLayer/boton_home" to="." method="_on_boton_home_pressed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
